--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <div class="greeting">HELLO</div>
+    <div class="greeting">THIS IS FOR PULL REQUEST</div>
   </body>
 </html>
