--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div class="greeting">HELLO</div>
     <div class="greeting">THIS IS FOR PULL REQUEST</div>
+    <div class="greeting">THIS IS FOR PULL REQUEST 2</div>
   </body>
 </html>
